{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "e227e356-4b16-432d-ba5a-de91d29acc87",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "90e1cdc4-6039-473d-bebe-871b5b5d6073",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "ee4d962a-ef08-4c6d-af8e-546f2d0a60ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "2c43bfb0-b022-4635-ad0e-059f6d248508",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "148fdd1f-dce1-4c52-9d52-fa184f8c0335",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "287cf9ec-7617-476b-afa7-bcb32646ee11",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "57fb840f-27ad-4ee0-b78a-17c58aeab5f3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1c88cb66-fcc4-4a85-9875-6d0262ab9d4a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "91fb9cc3-6ee1-4a1c-be63-8cb27414194b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Action",
            "id": "7331d7c7-a9b1-43e9-85c8-dbf289a63c4a",
            "actions": [
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "4f53775b-9716-4fe0-9c9b-05a91648ced7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMousePress",
                    "type": "Button",
                    "id": "a047004a-456b-4760-a6a8-8d0df3e5f817",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseRelease",
                    "type": "Button",
                    "id": "d31f4100-8a7f-42e1-a597-5aaf2f4aabfa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ObjectDistance",
                    "type": "PassThrough",
                    "id": "875ce308-b12f-4b3d-a369-6a9f48e6afb2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0484e97a-e8fc-4654-961a-66df6328f764",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4400d292-2943-4f32-bb76-8f83b9c7a347",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightMousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41df01ac-3ed8-436a-ad4a-142d4f8e3d5e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a760b99-8ba2-4bb6-9bfe-bd64a8c19583",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ObjectDistance",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}